--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,22 +9,18 @@ body{
   background-color: #1E2D3B;
   height: 100vh;
 }
-.wrap{
-  width: 100%;
-  height: 60px;
-  background-color:#2E3A46;
+header{
+  height: 70px;
+  background-color: #2E3A46;
+  line-height: 70px;
 }
 
-header .wrap .logo{
-  width: 100px;
-  height: 100%;
-  padding: 5px;
-  text-align: center;
+header img{
+    width: 50px;
 }
 
-header .wrap .logo img{
-  height: 90%;
-  cursor: pointer;
+header select{
+    width: 250px;
 }
 
 main .box{
